fix visible overflow on gameplay ui

--- a/src/app/gameplay/GameplayLayout.scss
+++ b/src/app/gameplay/GameplayLayout.scss
@@ -1,3 +1,15 @@
+.gameplay-root {
+  position: relative;
+  flex: 1;
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+
+  isolation: isolate;
+  // enables popups to appear over other elements
+  // see https://base-ui.com/react/overview/quick-start
+}
+
 .gameplay__layer {
   position: absolute;
   top: 0;
@@ -14,17 +26,6 @@
 .layout-desktop {
   @extend .gameplay__layer;
   display: flex;
-}
-
-.gameplay-root {
-  position: relative;
-  flex: 1;
-  width: 100%;
-  height: 100%;
-
-  isolation: isolate;
-  // enables popups to appear over other elements
-  // see https://base-ui.com/react/overview/quick-start
 }
 
 .gui-layer {
